force-app/main/default/objects/LoanApplication__c/LoanApplication__c.object-meta.xml
<CustomObject>
    <label>LoanApplication</label>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LoanApplications</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>