force-app/main/default/objects/LoanApplication__c/fields/Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_ID__c</fullName>
    <label>Email ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>