force-app/main/default/objects/LoanApplication__c/fields/LoanApplicantId__c.field-meta.xml
<CustomField>
    <fullName>LoanApplicantId__c</fullName>
    <label>LoanApplicantId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>